--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Raghav Bansal | AI/ML Developer</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='static/css/style.css') }}">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -139,6 +139,6 @@
     </div>
 
     <!-- JS -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='static/js/script.js') }}"></script>
 </body>
 </html>
