--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +5,7 @@
     <title>Raghav Bansal | AI/ML Developer</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='static/css/style.css') }}">
+    <link rel="stylesheet" href="static/css/style.css">
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +41,7 @@
                 <a href="#contact" class="btn fade-in delay-4">Get In Touch</a>
             </div>
             <div class="hero-image fade-in delay-2">
-                <img src="{{ url_for('static', filename='images/raghav_port_pic.jpeg') }}" alt="Raghav Bansal">
+                <img src="/static/images/raghav_port_pic.jpeg" alt="Raghav Bansal">
             </div>
         </section>
 
@@ -139,6 +138,6 @@
     </div>
 
     <!-- JS -->
-    <script src="{{ url_for('static', filename='static/js/script.js') }}"></script>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
