--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="project-card" 
                      data-title="Predict Food Delivery Time" 
                      data-tech="Python, Scikit-learn, Pandas, Random Forest" 
-                     data-img="{{ url_for('static', filename='images/project1.png') }}" 
+                     data-img="static/images/project1.png" 
                      data-desc="Built a classification model to predict food delivery time using restaurant data. Achieved 76.9% test accuracy on a dataset of 11K+ records.">
                     <h3>Predict Food Delivery Time</h3>
                     <p>Machine Learning, Classification</p>
@@ -73,7 +73,7 @@
                 <div class="project-card" 
                      data-title="Cold Email Generator" 
                      data-tech="Llama3.1, Langchain, Groq, ChromaDB, Streamlit" 
-                     data-img="{{ url_for('static', filename='images/project2.png') }}" 
+                     data-img="static/images/project2.png" 
                      data-desc="Built a tool that takes career page URLs and generates cold emails. Used Llama3.1 for generation, Langchain+Groq for fast inference, and Streamlit for the UI.">
                     <h3>Cold Email Generator</h3>
                     <p>Generative AI, LLM Tooling</p>
@@ -82,7 +82,7 @@
                 <div class="project-card" 
                      data-title="Transaction Fraud Detection" 
                      data-tech="Python, XGBoost, Flask, MLflow" 
-                     data-img="{{ url_for('static', filename='images/project3.png') }}" 
+                     data-img="static/images/project3.png" 
                      data-desc="Developed an ML pipeline to detect fraud. Used XGBoost with tuning to achieve 91.5% balanced accuracy. Deployed via Flask and projected Rs 57M profit.">
                     <h3>Transaction Fraud Detection</h3>
                     <p>Fintech, End-to-End ML</p>
